--- a/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -13,7 +13,7 @@
 ```
 ##### Lua
 ```Lua
--- 所持品内の納品物アイテムの数を確認しあれば納品なければechoにテキスト出力
+-- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36060) == 0 then
     yield("/e アイテムなし")
     return
