--- a/Something_Need_Doing/Leves/Crafter/キャロットラペ.md
+++ b/Something_Need_Doing/Leves/Crafter/キャロットラペ.md
@@ -1,2 +1,31 @@
-## キャロットラペ
-作ったら載せる
+## キャロットラペ<br/>※作成途中
+##### Native
+```
+/target グリッグ
+/interact <wait.0.5>
+/callback SelectString true 1 <wait.0.2>
+/callback GuildLeve true 3 1643 <wait.0.2>
+/callback GuildLeve true -1 <wait.0.2>
+/callback SelectString true 3 <wait.0.2>
+/target アルダイルン
+/interact <wait.0.7>
+/callback JournalResult true 0
+```
+##### Lua
+```Lua
+-- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
+if Inventory.GetHqItemCount(36047) == 0 then
+    yield("/e アイテムなし")
+    return
+else
+    yield("/target グリッグ")
+    yield("/interact <wait.0.5>")
+    yield("/callback SelectString true 1 <wait.0.2>")
+    yield("/callback GuildLeve true 3 1643 <wait.0.2>")
+    yield("/callback GuildLeve true -1 <wait.0.2>")
+    yield("/callback SelectString true 3 <wait.0.2>")
+    yield("/target アルダイルン")
+    yield("/interact <wait.0.6>")
+    yield("/callback JournalResult true 0")
+end
+```
