--- a/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -1,5 +1,18 @@
 ## チャイ・トゥ・ヴヌー<br/>
-##### Native
+##### Native（無限ループ）
+```
+/target グリッグ
+/interact <wait.0.5>
+/callback SelectString true 1 <wait.0.2>
+/callback GuildLeve true 3 1647 <wait.0.2>
+/callback GuildLeve true -1 <wait.0.2>
+/callback SelectString true 3 <wait.0.2>
+/target アルダイルン
+/interact <wait.0.7>
+/callback JournalResult true 0 <wait.0.3>
+/loop
+```
+##### Native（ループなし）
 ```
 /target グリッグ
 /interact <wait.0.5>
