--- a/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -1,5 +1,5 @@
 ## チャイ・トゥ・ヴヌー<br/>
-##### Native（無限ループ）
+##### Native（ループあり）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -24,7 +24,11 @@
 /interact <wait.0.7>
 /callback JournalResult true 0
 ```
-##### Lua
+##### Lua（ループあり）
+```Lua
+作成中
+```
+##### Lua（ループなし）
 ```Lua
 -- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36060) == 0 then
