--- a/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -1,4 +1,4 @@
-## チャイ・トゥ・ヴヌー<br/>
+## チャイ・トゥ・ヴヌー※動作未確認<br/>
 ##### Native（ループあり）
 ```
 /target グリッグ
@@ -26,13 +26,25 @@
 ```
 ##### Lua（ループあり）
 ```Lua
-作成中
+--所持品内にHQ納品物が3個以上あれば納品、なければechoにテキスト出力
+while Inventory.GetHqItemCount(36060) >= 3 do
+    yield("/target グリッグ")
+    yield("/interact <wait.0.5>")
+    yield("/callback SelectString true 1 <wait.0.2>")
+    yield("/callback GuildLeve true 3 1647 <wait.0.2>")
+    yield("/callback GuildLeve true -1 <wait.0.2>")
+    yield("/callback SelectString true 3 <wait.0.2>")
+    yield("/target アルダイルン")
+    yield("/interact <wait.0.7>")
+    yield("/callback JournalResult true 0) <wait.0.3>")
+end
+    yield("/e 納品アイテムが不足しています")
 ```
 ##### Lua（ループなし）
 ```Lua
 -- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36060) == 0 then
-    yield("/e アイテムなし")
+    yield("/e 納品アイテムが不足しています")
     return
 else
     yield("/target グリッグ")
