--- a/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -26,7 +26,7 @@
 ```
 ##### Lua（ループあり）
 ```Lua
---所持品内にHQ納品物が3個以上あれば納品、なければechoにテキスト出力
+--所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 while Inventory.GetHqItemCount(36060) >= 3 do
     yield("/target グリッグ")
     yield("/interact <wait.0.5>")
@@ -42,8 +42,8 @@ end
 ```
 ##### Lua（ループなし）
 ```Lua
--- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
-if Inventory.GetHqItemCount(36060) == 0 then
+-- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
+if Inventory.GetHqItemCount(36060) < 3 then
     yield("/e 納品アイテムが不足しています")
 else
     yield("/target グリッグ")
