--- a/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/Something_Need_Doing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -1,5 +1,5 @@
-## チャイ・トゥ・ヴヌー※動作未確認<br/>
-##### Native（ループあり）
+## チャイ・トゥ・ヴヌー<br/>
+##### Native（ループあり）※動作未確認
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -24,7 +24,7 @@
 /interact <wait.0.7>
 /callback JournalResult true 0
 ```
-##### Lua（ループあり）
+##### Lua（ループあり）※動作未確認
 ```Lua
 --所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 while Inventory.GetHqItemCount(36060) >= 3 do
@@ -40,7 +40,7 @@ while Inventory.GetHqItemCount(36060) >= 3 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-##### Lua（ループなし）
+##### Lua（ループなし）※動作未確認
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36060) < 3 then
