--- a/Something_Need_Doing/Leves/Crafter/キャロットラペ.md
+++ b/Something_Need_Doing/Leves/Crafter/キャロットラペ.md
@@ -1,5 +1,18 @@
-## キャロットラペ<br/>※作成途中
-##### Native
+## キャロットラ※動作未確認<br/>
+##### Native（ループあり）
+```
+/target グリッグ
+/interact <wait.0.5>
+/callback SelectString true 1 <wait.0.2>
+/callback GuildLeve true 3 1643 <wait.0.2>
+/callback GuildLeve true -1 <wait.0.2>
+/callback SelectString true 3 <wait.0.2>
+/target アルダイルン
+/interact <wait.0.7>
+/callback JournalResult true 0 <wait.0.3>
+/loop
+```
+##### Native（ループなし）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -11,7 +24,23 @@
 /interact <wait.0.7>
 /callback JournalResult true 0
 ```
-##### Lua
+##### Lua（ループあり）
+```Lua
+--所持品内にHQ納品物が3個以上あれば納品、なければechoにテキスト出力
+while Inventory.GetHqItemCount(36047) >= 3 do
+    yield("/target グリッグ")
+    yield("/interact <wait.0.5>")
+    yield("/callback SelectString true 1 <wait.0.2>")
+    yield("/callback GuildLeve true 3 1643 <wait.0.2>")
+    yield("/callback GuildLeve true -1 <wait.0.2>")
+    yield("/callback SelectString true 3 <wait.0.2>")
+    yield("/target アルダイルン")
+    yield("/interact <wait.0.7>")
+    yield("/callback JournalResult true 0) <wait.0.3>")
+end
+    yield("/e 納品アイテムが不足しています")
+```
+##### Lua（ループなし）
 ```Lua
 -- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36047) == 0 then
@@ -25,7 +54,7 @@ else
     yield("/callback GuildLeve true -1 <wait.0.2>")
     yield("/callback SelectString true 3 <wait.0.2>")
     yield("/target アルダイルン")
-    yield("/interact <wait.0.6>")
-    yield("/callback JournalResult true 0")
+    yield("/interact <wait.0.7>")
+    yield("/callback JournalResult true 0)")
 end
 ```
