--- a/Something_Need_Doing/Leves/Crafter/キャロットラペ.md
+++ b/Something_Need_Doing/Leves/Crafter/キャロットラペ.md
@@ -1,4 +1,4 @@
-## キャロットラ※動作未確認<br/>
+## キャロットラペ※動作未確認<br/>
 ##### Native（ループあり）
 ```
 /target グリッグ
@@ -26,7 +26,7 @@
 ```
 ##### Lua（ループあり）
 ```Lua
---所持品内にHQ納品物が3個以上あれば納品、なければechoにテキスト出力
+-- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 while Inventory.GetHqItemCount(36047) >= 3 do
     yield("/target グリッグ")
     yield("/interact <wait.0.5>")
@@ -42,10 +42,9 @@ end
 ```
 ##### Lua（ループなし）
 ```Lua
--- 所持品内の納品物アイテムの数を確認し、あれば納品なければechoにテキスト出力
-if Inventory.GetHqItemCount(36047) == 0 then
-    yield("/e アイテムなし")
-    return
+-- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
+if Inventory.GetHqItemCount(36047) < 3 then
+    yield("/e 納品アイテムが不足しています")
 else
     yield("/target グリッグ")
     yield("/interact <wait.0.5>")
@@ -54,7 +53,7 @@ else
     yield("/callback GuildLeve true -1 <wait.0.2>")
     yield("/callback SelectString true 3 <wait.0.2>")
     yield("/target アルダイルン")
-    yield("/interact <wait.0.7>")
-    yield("/callback JournalResult true 0)")
+    yield("/interact <wait.0.6>")
+    yield("/callback JournalResult true 0")
 end
 ```
