--- a/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
+++ b/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
@@ -36,7 +36,7 @@ while Inventory.GetHqItemCount(36047) >= 3 do
     yield("/callback SelectString true 3 <wait.0.2>")
     yield("/target アルダイルン")
     yield("/interact <wait.0.7>")
-    yield("/callback JournalResult true 0) <wait.0.3>")
+    yield("/callback JournalResult true 0 <wait.0.3>")
 end
     yield("/e 納品アイテムが不足しています")
 ```
