--- a/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
+++ b/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
@@ -1,5 +1,5 @@
 ## キャロットラペ※動作未確認<br/>
-##### Native（ループあり）
+### Native（ループあり）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -12,7 +12,7 @@
 /callback JournalResult true 0 <wait.0.3>
 /loop
 ```
-##### Native（ループなし）
+### Native（ループなし）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -24,7 +24,10 @@
 /interact <wait.0.7>
 /callback JournalResult true 0
 ```
-##### Lua（ループあり）
+### Lua（ループあり）<br/>
+> [!IMPORTANT]
+>リーヴ納品のLua版スクリプトについて、現在リーヴ券の数を確認する方法が不明又ははまだ未実装であるため、<br/>
+アイテムは足りているがリーヴ券が足りない場合のループは`/snd stop`等を使用し、手動で停止してください。
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 while Inventory.GetHqItemCount(36047) >= 3 do
@@ -40,7 +43,7 @@ while Inventory.GetHqItemCount(36047) >= 3 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-##### Lua（ループなし）
+### Lua（ループなし）
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36047) < 3 then
