--- a/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
+++ b/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
@@ -26,7 +26,7 @@
 ```
 ### Lua（ループあり）<br/>
 > [!IMPORTANT]
->リーヴ納品のLua版スクリプトについて、現在リーヴ券の数を確認する方法が不明又ははまだ未実装であるため、<br/>
+>リーヴ納品のLua版スクリプトについて、現在リーヴ券の数を確認する方法が不明又は未実装であるため、<br/>
 アイテムは足りているがリーヴ券が足りない場合のループは`/snd stop`等を使用し、手動で停止してください。
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
