--- a/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
+++ b/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
@@ -1,6 +1,6 @@
-## キャロットラペ※動作未確認<br/>
+## キャロットラペ※一部動作未確認<br/>
 
-### Native（ループあり）
+### Native（ループあり）※動作未確認
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -13,7 +13,7 @@
 /callback JournalResult true 0 <wait.0.3>
 /loop
 ```
-### Native（ループなし）
+### Native（ループなし）※動作未確認
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -44,7 +44,7 @@ while Inventory.GetHqItemCount(36047) >= 3 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-### Lua（ループなし）
+### Lua（ループなし）※動作未確認
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36047) < 3 then
