--- a/SomethingNeedDoing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
+++ b/SomethingNeedDoing/Leves/Crafter/チャイ・トゥ・ヴヌー.md
@@ -1,4 +1,4 @@
-## チャイ・トゥ・ヴヌー<br/>
+## チャイ・トゥ・ヴヌー※一部動作未確認<br/>
 ### Native（ループあり）※動作未確認
 ```
 /target グリッグ
@@ -39,7 +39,7 @@ while Inventory.GetHqItemCount(36060) >= 3 do
     yield("/callback SelectString true 3 <wait.0.2>")
     yield("/target アルダイルン")
     yield("/interact <wait.0.7>")
-    yield("/callback JournalResult true 0) <wait.0.3>")
+    yield("/callback JournalResult true 0 <wait.0.3>")
 end
     yield("/e 納品アイテムが不足しています")
 ```
