--- a/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
+++ b/SomethingNeedDoing/Leves/Crafter/キャロットラペ.md
@@ -1,6 +1,6 @@
-## キャロットラペ※一部動作未確認<br/>
+## キャロットラペ<br/>
 
-### Native（ループあり）※動作未確認
+### Native（ループあり）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -13,7 +13,7 @@
 /callback JournalResult true 0 <wait.0.3>
 /loop
 ```
-### Native（ループなし）※動作未確認
+### Native（ループなし）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -25,7 +25,7 @@
 /interact <wait.0.7>
 /callback JournalResult true 0
 ```
-### Lua（ループあり）<br/>
+### Lua（ループあり）
 > [!IMPORTANT]
 >現在、リーヴ券の残数を確認する方法が不明又は未実装の為、アイテムは足りているがリーヴ券が足りない場合のループは`/snd stop`等を使用し、手動で停止してください。
 ```Lua
@@ -43,7 +43,7 @@ while Inventory.GetHqItemCount(36047) >= 3 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-### Lua（ループなし）※動作未確認
+### Lua（ループなし）
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36047) < 3 then
