--- a/SomethingNeedDoing/Leves/Crafter/巨匠の薬酒.md
+++ b/SomethingNeedDoing/Leves/Crafter/巨匠の薬酒.md
@@ -1,5 +1,5 @@
-## 巨匠の薬酒※動作未確認<br/>
-### Native（ループあり）<!-- ※動作未確認 -->
+## 巨匠の薬酒※一部動作未確認<br/>
+### Native（ループあり）
 ```
 /target グリッグ
 /interact <wait.0.5>
@@ -24,7 +24,7 @@
 /interact <wait.0.7>
 /callback JournalResult true 0
 ```
-### Lua（ループあり）<!-- ※動作未確認 --><br/>
+### Lua（ループあり）※動作未確認<br/>
 > [!IMPORTANT]
 >現在、リーヴ券の残数を確認する方法が不明又は未実装の為、アイテムは足りているがリーヴ券が足りない場合のループは`/snd stop`等を使用し、手動で停止してください。
 ```Lua
@@ -42,7 +42,7 @@ while Inventory.GetHqItemCount(36115) >= 3 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-### Lua（ループなし）<!-- ※動作未確認 -->
+### Lua（ループなし）※動作未確認
 ```Lua
 -- 所持品内にあるHQ納品物の数を確認し、3個以上あれば納品なければechoにテキスト出力
 if Inventory.GetHqItemCount(36115) < 3 then
