動作テスト完了に伴い「動作未確認」の文字を削除

--- a/SomethingNeedDoing/Leves/Fisher/カーヴァーイクティス.md
+++ b/SomethingNeedDoing/Leves/Fisher/カーヴァーイクティス.md
@@ -1,4 +1,4 @@
-# カーヴァーイクティス※一部動作未確認<br/>
+# カーヴァーイクティス<br/>
 Author: 小鳥遊レイ
 <br/>
 <br/>
@@ -67,7 +67,7 @@ Talkタブに以下のふたつを追加。<br/>
 /interact <wait.1>
 /callback JournalResult true 0
 ```
-#### Lua（ループあり）※動作未確認
+#### Lua（ループあり）
 ```Lua
 -- 所持品内にある納品物の数を確認し、9個以上あれば納品なければechoにテキスト出力
 while Inventory.GetItemCount(43808) >= 9 do
@@ -83,7 +83,7 @@ while Inventory.GetItemCount(43808) >= 9 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-#### Lua（ループなし）※動作未確認
+#### Lua（ループなし）
 ```Lua
 -- 所持品内にある納品物の数を確認し、9個以上あれば納品なければechoにテキスト出力
 if Inventory.GetItemCount(43808) < 9 then
