--- a/SomethingNeedDoing/Leves/Fisher/ワーマウス.md
+++ b/SomethingNeedDoing/Leves/Fisher/ワーマウス.md
@@ -1,4 +1,4 @@
-# ワーマウス※動作未確認<br/>
+# ワーマウス<br/>
 Author: 小鳥遊レイ
 <br/>
 <br/>
@@ -42,7 +42,7 @@ Talkタブに以下のふたつを追加。<br/>
 <br/>
 
 ## スクリプト<br/>
-#### Native（ループあり）<!-- ※動作未確認 -->
+#### Native（ループあり）
 ```
 /target マリハリ
 /interact <wait.0.5>
@@ -55,7 +55,7 @@ Talkタブに以下のふたつを追加。<br/>
 /callback JournalResult true 0 <wait.1>
 /loop
 ```
-#### Native（ループなし）<!-- ※動作未確認 -->
+#### Native（ループなし）
 ```
 /target マリハリ
 /interact <wait.0.5>
@@ -67,7 +67,7 @@ Talkタブに以下のふたつを追加。<br/>
 /interact <wait.1>
 /callback JournalResult true 0
 ```
-#### Lua（ループあり）<!-- ※動作未確認 -->
+#### Lua（ループあり）
 ```Lua
 -- 所持品内にある納品物の数を確認し、9個以上あれば納品なければechoにテキスト出力
 while Inventory.GetItemCount(43843) >= 9 do
@@ -83,7 +83,7 @@ while Inventory.GetItemCount(43843) >= 9 do
 end
     yield("/e 納品アイテムが不足しています")
 ```
-#### Lua（ループなし）<!-- ※動作未確認 -->
+#### Lua（ループなし）
 ```Lua
 -- 所持品内にある納品物の数を確認し、9個以上あれば納品なければechoにテキスト出力
 if Inventory.GetItemCount(43843) < 9 then
